# E-Commerce-Web

./: README.md  pyproject.toml
DataForInsert/: insertData.sql
backend/app/: main.py
backend/app/api/: order.py  product.py  sql.py  user.py
backend/app/core/: config.py
backend/app/db/: connection.py
backend/app/db/queries/: order.sql  product.sql
backend/app/repositories/: order_repo.py  product_repo.py
backend/app/schemas/: order.py  product.py  user.py
backend/app/services/: order_service.py  product_service.py
database/: ECommerceTech.sql  schema.sql  seed.sql
frontend/: cart.html  index.html  products.html  sql-playground.css  sql-playground.html
frontend/js/: api.js  cart.js  sql-playground.js
