[project]
name = "e-commerce"
version = "0.1.0"
description = "E-commerce project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymssql>=2.3.13",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
